--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.3.0",
   "description": "TNEF Parser using NodeJS",
   "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ]
-    ]
+    "presets": [["env", {"targets": {"node": "current"}}]]
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "rules": {
+    }
   },
   "main": "dist/commands/parse.js",
   "bin": {
