--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "rules": {
     }
   },
-  "main": "dist/commands/parse.js",
+  "main": "src/commands/parse.js",
   "bin": {
-    "node-tnef": "dist/bin/node-tnef.js"
+    "node-tnef": "src/bin/node-tnef.js"
   },
   "scripts": {
     "prebuild": "npm run clean",
