--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "1.3.0",
   "description": "TNEF Parser using NodeJS",
   "babel": {
-    "presets": [["env", {"targets": {"node": "current"}}]]
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   },
   "eslintConfig": {
     "parserOptions": {
@@ -13,8 +22,7 @@
         "jsx": true
       }
     },
-    "rules": {
-    }
+    "rules": {}
   },
   "main": "dist/commands/parse.js",
   "bin": {
@@ -47,21 +55,21 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-preset-env": "^1.6.0",
-    "eslint": "^4.7.2",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "rimraf": "^2.6.2"
+    "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
+    "bluebird": "^3.5.4",
     "bunyan": "^1.8.12",
     "convert-string": "^0.1.0",
-    "yargs": "^10.0.3"
+    "yargs": "^13.2.2"
   }
 }
