--- a/package.json
+++ b/package.json
@@ -1,75 +1,27 @@
 {
   "name": "node-tnef",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "TNEF Parser using NodeJS",
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ]
-    ]
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "rules": {}
-  },
-  "main": "dist/commands/parse.js",
-  "bin": {
-    "node-tnef": "dist/bin/node-tnef.js"
-  },
-  "scripts": {
-    "prebuild": "npm run clean",
-    "build": "babel src --out-dir dist",
-    "clean": "rimraf dist",
-    "prepublish": "npm run build",
-    "prepare": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "src/parse.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gatewayapps/node-tnef.git"
   },
-  "keywords": [
-    "tnef",
-    "node",
-    "parser",
-    "email"
-  ],
   "author": "John Murphy <john@gatewayapps.com> (http://www.gatewayapps.com)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gatewayapps/node-tnef/issues"
   },
-  "homepage": "https://github.com/gatewayapps/node-tnef#readme",
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "rimraf": "^2.6.3"
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.5.5"
   },
+  "homepage": "https://github.com/gatewayapps/node-tnef#readme",
   "dependencies": {
-    "bluebird": "^3.5.4",
-    "bunyan": "^1.8.12",
-    "convert-string": "^0.1.0",
-    "yargs": "^13.2.2"
+    "bunyan": "^1.8.15",
+    "convert-string": "^0.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.7"
   }
 }
